--- a/front/src/styles/pages/Home.scss
+++ b/front/src/styles/pages/Home.scss
@@ -6,10 +6,21 @@
     justify-content: space-between;
 }
 
-.filter {
-    margin-bottom: 5vh;
-    display: flex;
-    justify-content: center;
+// .filter {
+//     margin-bottom: 5vh;
+//     display: flex;
+//     justify-content: center;
+
+//     .city {
+//         background-color: transparent;
+//         color: $clr-neutral-darkest;
+//         border-radius: 0.2rem;
+//         height: 5vh;
+//         width: 50%;
+//     }
+// }
+.filter_section {
+    margin: 5vh 0;
 
     .city {
         background-color: transparent;
@@ -22,7 +33,11 @@
 
 .content {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(12rem, 16rem));
+    grid-template-columns: repeat(auto-fit, minmax(12rem, 18rem));
     gap: 2rem;
     justify-content: center;
+
+    &__title-section{
+       margin: 0 0 5vh 3vw;
+    }
 }
