--- a/front/src/styles/components/Card.scss
+++ b/front/src/styles/components/Card.scss
@@ -2,8 +2,6 @@
 
 @import "../utils/variables.scss";
 
-$radius: 0.2rem;
-
 *,
 *::before,
 *::after {
@@ -20,73 +18,37 @@ body {
 .card {
     overflow: hidden;
     box-shadow: 1px 1px 20px $clr-neutral-main;
-    border-radius: $radius;
+    border-radius: 1.5rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     transition: transform 250ms ease-in;
 
+    &__content {
+        padding: 1rem;
+    }
+
     &__image {
         height: 10rem;
         width: 100%;
         object-fit: cover;
+        border-radius: 0.4rem;
     }
 
     &__title {
-        padding-bottom: 1rem;
-    }
-
-    &__details {
-        padding: 1rem;
-    }
-
-    &__btn-container {
-        display: flex;
-        flex-direction: column;
-        min-height: 20vh;
-        justify-content: space-around;
-        margin-bottom: 1rem;
-    }
-
-    &__btn {
-        padding: 1rem;
-        font-family: inherit;
-        font-weight: bold;
-        font-size: 1rem;
-        margin: 0 1.5rem;
-        background: transparent;
-        border-radius: $radius;
-        transition: background 200ms ease-in, color 200ms ease-in;
+        margin: 1vh 0 0;
     }
 
     &__price {
-        margin-top: 0.5rem;
+        color: gray;
+    }
+
+    &__details {
+        font-size: 0.8rem;
     }
 
     &:hover {
         transform: scale(1.02);
+        cursor: pointer;
     }
-}
-
-.more-info {
-    border: 2px solid $clr-primary;
-    color: $clr-primary;
-}
-
-.more-info:hover {
-    cursor: pointer;
-    background: $clr-primary;
-    color: white;
-}
-
-.contact {
-    border: 2px solid $clr-neutral-darkest;
-    background-color: transparent;
-    color: $clr-neutral-darkest;
-}
-
-.contact:hover {
-    cursor: pointer;
-    background: $clr-neutral-darkest;
-    color: $clr-neutral-lightest;
 }
